<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lr_ats_sdk_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_initSDK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/lrGreen"
        android:text="@string/initialize_liveRamp_ats_sdk"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_initSDK" />

    <Button
        android:id="@+id/btn_clearAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/lrGreen"
        android:text="@string/clear_all_fields"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_resetSDK" />

    <Button
        android:id="@+id/btn_sampleGMAReq"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/sample_gma_req"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clearAll" />

    <Button
        android:id="@+id/btn_samplePrebidReq"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/sample_prebid_req"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clearAll" />

    <Button
        android:id="@+id/btn_resetSDK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/lrGreen"
        android:clickable="false"
        android:text="@string/reset_lr_ats_sdk"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_envelopeValue" />

    <TextView
        android:id="@+id/tv_envelope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/envelope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fetchEnvelope" />

    <Button
        android:id="@+id/btn_fetchEnvelope"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/lrGreen"
        android:text="@string/fetch_rampID_envelope"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_emailInput" />

    <TextView
        android:id="@+id/tv_envelopeValue"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/lrGreen"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_envelope" />

    <EditText
        android:id="@+id/editText_emailInput"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/exampleEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_versionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/v0_0_0"
        app:layout_constraintStart_toEndOf="@+id/tv_version"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_initValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/not_initialized"
        app:layout_constraintStart_toEndOf="@+id/tv_init"
        app:layout_constraintTop_toBottomOf="@+id/tv_versionValue" />

    <TextView
        android:id="@+id/tv_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/sdk_initialized"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_version" />

    <TextView
        android:id="@+id/tv_errorRegion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/onFire"
        android:gravity="center"
        android:text="@string/err_string"
        android:visibility="visible"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>